# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.
target_os = "android"
target_cpu = "arm"
is_debug = false

android_channel = "stable"
is_official_build = true
is_component_build = false
is_clang = true
symbol_level = 1
use_unofficial_version_number = false
android_default_version_code = "1"
android_default_version_name = "1.0.4"
android_keystore_name = "GlobalKeyStore.jks"
android_keystore_password = "smedia123!@#"
android_keystore_path = "/home/ubuntu16/browser-android-tabs/src/GlobalKeyStore.jks"
v8_use_external_startup_data = true
fieldtrial_testing_like_official_build = true
icu_use_data_file = false


